# ml_wheel

./: README.md  matrix.py  pyproject.toml  setup.py  vector.py
src/: __init__.py
src/autograd/: __init__.py  computation_graph.py
src/loss/: __init__.py  loss.py
src/math/: __init__.py  activation_functions.py  matrix.py  vector.py
src/random/: __init__.py
tests/: __init__.py  test_math.py
